fixed nav on mobile to click a tags on hero

--- a/styles/sass/_aboutme.scss
+++ b/styles/sass/_aboutme.scss
@@ -17,6 +17,7 @@ section.about-me {
     }
     .skill-list {
         li {
+            letter-spacing: 0.3px;
             display: inline-block;
             border: 1px solid white;
             padding: 10px;
@@ -27,8 +28,8 @@ section.about-me {
 }
 
 .experience-wrap {
-    font-size: 1.2rem;
-    letter-spacing: 1px;
+    font-size: 1rem;
+    letter-spacing: 0.3px;
     display: flex;
     margin: 10px 0 24px;
     .number {
