--- a/styles/sass/_nav.scss
+++ b/styles/sass/_nav.scss
@@ -67,6 +67,7 @@ header {
             }
             ul a {
                 display: flex;
+                z-index: 101;
                 
         }
     }
